# limit

./: .clang-format  .clang-tidy  .gitignore  .mdlrc  AGENTS.md  CMakeLists.txt  README.md  lsan.supp  valgrind.supp
.github/workflows/: ci.yml
docs/: control-scheme.md  design.md  visual-design.md
scripts/: coverage.sh  format-sh.sh  format.sh  lint-md.sh  lint-sh.sh  lint.sh  run-sanitize.sh  run.sh  sanitize-test.sh  sanitize.sh  valgrind.sh
src/: dev-controller.cpp  dev-controller.h  keymap.cpp  keymap.h  limit-app.cpp  main-component.cpp  main-component.h  ui-layout.cpp  ui-layout.h  ui-theme.cpp  ui-theme.h
tests/: main-component-test.cpp  smoke-test.cpp  ui-layout-test.cpp
